deploy: d551b113acd0523690968d73b780a4230dfad01e

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -3,8 +3,7 @@
       "languages": {
         "en": "English",
         "it": "Italian",
-        "fr": "French",
-        "de": "German"
+        "es": "Spanish"
       }
     },
     "footer": {
