deploy: 2a190071dbc63da50f142183229e7165cc9ea299

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -10,8 +10,8 @@
       "links": {
         "refrences": "References and Helpful Links",
         "credits": "Credits",
-        "authors": "authors",
-        "close": "close"
+        "authors": "Authors",
+        "close": "Close"
       }
     }
   }
